--- a/stealthify/manifest.json
+++ b/stealthify/manifest.json
@@ -2,41 +2,32 @@
 	"author": "Tholian Network",
 	"name": "Stealthify",
 	"version": "0.0.1",
-	"description": "Integrate Stealth with Chromium for better Privacy",
+	"description": "Use Stealth as a Proxy for better Privacy",
 	"icons": {
-		"16":  "design/icon-16.png",
-		"32":  "design/icon-32.png",
-		"48":  "design/icon-48.png",
+		"48": "design/icon-48.png",
 		"128": "design/icon-128.png"
 	},
 	"background": {
-		"scripts": [ "chrome/background.js" ]
+		"page": "chrome/background.html",
+		"persistent": true
 	},
 	"browser_action": {
+		"browser_style": false,
 		"default_title": "Site Modes",
 		"default_popup": "chrome/popup.html",
-		"default_icon": {
-			"16":  "design/icon-16.png",
-			"32":  "design/icon-32.png",
-			"48":  "design/icon-48.png",
-			"128": "design/icon-128.png"
-		}
+		"default_icon": "design/icon-48.png"
 	},
-	"web_accessible_resources": [
-		"TODO/ALL_SOURCE_FILES.mjs"
-	],
 	"permissions": [
 		"cookies",
-		"privacy",
 		"proxy",
 		"storage",
+		"tabs",
 		"webRequest",
 		"webRequestBlocking",
-		"storage",
 		"http://*/*",
 		"https://*/*"
 	],
-	"manifest_version": 3,
+	"manifest_version": 2,
 	"offline_enabled": true,
 	"options_page": "chrome/options.html"
 }
